[metadata]
name = traccess
version = attr: traccess.__version__
author = Willem Klumpenhouwer
author_email = willem@klumpentown.com
description = Transportation access to opportunities and equity analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    pandas >= 2.0

package_dir=
    =src

[options.packages.find]
where=src